[tool.poetry]
name = "opt-portfolio"
version = "0.1.0"
description = "This repo takes in a Seeking Alpha Portfolio Excel Export and filters down to a list of symbols that pass defined quantitative metrics. In addition, M1 Finance portfolio holdings and monthly statements can be uploaded to track portfolio performance."
authors = ["Marco U. Colón <marcocolon@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
